@@ -160,6 +160,7 @@ Version 1.3-svn:
    * better handling of SDL_ListModes return code (no user impact)
    * first turn of a game is saved again (fixes bug #7909 and bug #8117)
    * reduce CPU usage by removing calls to SDL_GetTicks for idle animations
+   * changed network thread management to be more scalable
 
 Version 1.2:
  * campaigns:
